<resources>
    <string name="app_name">BankJoyCodeSolution</string>
    <string name="button_continue">Continue</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="remember_me">Remember me</string>
    <string name="help">Help?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_error_message">Your username or password is incorrect. Please try again.</string>
</resources>